--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello, world
+<html>
+<head>
+	<title>Home - TeamJimRoberts</title>
+	<link href="style.css" type="text/css" rel="stylesheet">
+</head>
+<body>
+	<div id="main">
+		<h1>Team Jim Roberts</h1>
+
+		<p>
+		I am not a web developer! I was tired of paying for web hosting and finally
+		 decided to host my own website. I have interesting stories, a diverse background
+		 and hopefully some cool projects to share, so welcome I hope you'll stick around! 
+		</p>
+		
+		<signature>~James Roberts</signature>
+	</div>
+</body>
+</html>
