--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<div id="main">
 		<h1>Team Jim Roberts</h1>
-
+		<center><img src = "under-construction.jpg"/></center>
 		<p>
 		I am not a web developer! I was tired of paying for web hosting and finally
 		 decided to host my own website. I have interesting stories, a diverse background
