fixed wrong url

--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,7 @@
 		Check out some of my sweet projects!
         </p>
         <p>
-            <a href="pixijs/dog-2_5d-v1/index.html">PixiPupJS</a>
+            <a href="pixijs/index.html">PixiPupJS</a>
         </p>
 		
 		<signature>~James Roberts</signature>
