attempting to quarantine jekyll to only my blog

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 	<div id="main">
 		<h1>Team Jim Roberts</h1>
 		<p>
-		I am a decent web developer and will be editing this website soon (hopefully!)
+		This is my website
+		</p>
+		<p>
+		<a href = "./blog">Check out my blog</a>
+		</p>
+		<p>
+		<a href = "./projects">Check out my projects</a>
 		</p>
 		
 		<signature>~James Roberts</signature>
