Add link to wordfall apk

--- a/projects/index.html
+++ b/projects/index.html
@@ -11,8 +11,11 @@
         </p>
         <p>
             <a href="pixijs/index.html">PixiPupJS</a>
-        </p>
-		
+		</p>
+		<p>
+			<a href="wordfall/app-debug.apk">Download WordFall-Mobile</button>
+		</p>
+		</script>
 		<signature>~James Roberts</signature>
 	</div>
 </body>
