update text to specify Android only

--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,7 @@
             <a href="pixijs/index.html">PixiPupJS</a>
 		</p>
 		<p>
-			<a href="wordfall/app-debug.apk">Download WordFall-Mobile</button>
+			<a href="wordfall/app-debug.apk">Download WordFall for Android</button>
 		</p>
 		</script>
 		<signature>~James Roberts</signature>
